--- a/index.html
+++ b/index.html
@@ -1,35 +1,90 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Your Name — Web Designer</title>
-  <meta name="description" content="Portfolio of Your Name — web designer & front-end developer." />
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Darwin | Web Designer</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <header>
-    <h1>Your Name</h1>
-    <p>Web Designer · Frontend Developer</p>
+<body class="bg-gray-50 text-gray-800">
+
+  <!-- Header -->
+  <header class="p-6 flex justify-between items-center">
+    <h1 class="text-2xl font-bold">Darwin<span class="text-blue-600">.</span></h1>
+    <nav>
+      <ul class="flex gap-6">
+        <li><a href="#about" class="hover:text-blue-600">About</a></li>
+        <li><a href="#portfolio" class="hover:text-blue-600">Portfolio</a></li>
+        <li><a href="#services" class="hover:text-blue-600">Services</a></li>
+        <li><a href="#contact" class="hover:text-blue-600">Contact</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <main>
-    <section id="projects">
-      <h2>Selected Projects</h2>
-      <article class="project">
-        <h3>Project Title</h3>
-        <p>Short description, role, tools used, and <a href="https://live-site.example">live demo</a>.</p>
-      </article>
-    </section>
+  <!-- Hero -->
+  <section class="h-screen flex flex-col justify-center items-center text-center">
+    <h2 class="text-5xl font-bold">Hi, I'm <span class="text-blue-600">Darwin</span></h2>
+    <p class="mt-4 text-xl text-gray-600">Web Designer & Frontend Developer</p>
+    <a href="#portfolio" class="mt-6 px-6 py-3 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700">View My Work</a>
+  </section>
 
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:you@example.com">you@example.com</a></p>
-    </section>
-  </main>
+  <!-- About -->
+  <section id="about" class="max-w-5xl mx-auto py-20 px-6">
+    <h3 class="text-3xl font-bold mb-6">About Me</h3>
+    <p class="text-lg text-gray-600">I’m a passionate web designer with expertise in creating clean, modern, and user-friendly websites. Skilled in HTML, CSS, JavaScript, and design tools like Figma & Photoshop.</p>
+  </section>
 
-  <footer>
-    <p>© Your Name</p>
+  <!-- Portfolio -->
+  <section id="portfolio" class="bg-gray-100 py-20 px-6">
+    <h3 class="text-3xl font-bold text-center mb-12">My Projects</h3>
+    <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
+      <!-- Project Card -->
+      <div class="bg-white shadow rounded-lg overflow-hidden">
+        <img src="project1.jpg" alt="Project 1" class="w-full h-48 object-cover">
+        <div class="p-4">
+          <h4 class="text-xl font-bold">Project Title</h4>
+          <p class="text-gray-600">Short description of the project.</p>
+          <a href="#" class="text-blue-600 hover:underline">View Live</a>
+        </div>
+      </div>
+      <!-- Repeat for more projects -->
+    </div>
+  </section>
+
+  <!-- Services -->
+  <section id="services" class="max-w-5xl mx-auto py-20 px-6">
+    <h3 class="text-3xl font-bold mb-12 text-center">Services</h3>
+    <div class="grid md:grid-cols-3 gap-8 text-center">
+      <div class="p-6 bg-white shadow rounded-lg">
+        <h4 class="text-xl font-bold mb-2">Web Design</h4>
+        <p class="text-gray-600">Modern, responsive, and user-friendly websites tailored to your needs.</p>
+      </div>
+      <div class="p-6 bg-white shadow rounded-lg">
+        <h4 class="text-xl font-bold mb-2">UI/UX Design</h4>
+        <p class="text-gray-600">Intuitive designs focused on great user experience.</p>
+      </div>
+      <div class="p-6 bg-white shadow rounded-lg">
+        <h4 class="text-xl font-bold mb-2">Branding</h4>
+        <p class="text-gray-600">Logos, visuals, and style guides to bring your brand to life.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="bg-gray-100 py-20 px-6">
+    <h3 class="text-3xl font-bold text-center mb-12">Contact Me</h3>
+    <form class="max-w-xl mx-auto space-y-4">
+      <input type="text" placeholder="Your Name" class="w-full p-3 border rounded-lg" />
+      <input type="email" placeholder="Your Email" class="w-full p-3 border rounded-lg" />
+      <textarea placeholder="Your Message" class="w-full p-3 border rounded-lg"></textarea>
+      <button class="w-full bg-blue-600 text-white py-3 rounded-lg hover:bg-blue-700">Send Message</button>
+    </form>
+  </section>
+
+  <!-- Footer -->
+  <footer class="text-center py-6 text-gray-600">
+    © 2025 Darwin. All rights reserved.
   </footer>
+
 </body>
 </html>
