--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Header -->
   <header class="p-6 flex justify-between items-center">
-    <h1 class="text-2xl font-bold">Darwin<span class="text-blue-600">.</span></h1>
+    <h1 class="text-2xl font-bold">GitGudAtCoding<span class="text-blue-600">.</span></h1>
     <nav>
       <ul class="flex gap-6">
         <li><a href="#about" class="hover:text-blue-600">About</a></li>
@@ -43,8 +43,8 @@
         <img src="project1.jpg" alt="Project 1" class="w-full h-48 object-cover">
         <div class="p-4">
           <h4 class="text-xl font-bold">Project Title</h4>
-          <p class="text-gray-600">Short description of the project.</p>
-          <a href="#" class="text-blue-600 hover:underline">View Live</a>
+          <p class="text-gray-600">Apple Plus inspired website.</p>
+          <a href="https://spiritechotv.com/" class="text-blue-600 hover:underline">View Live</a>
         </div>
       </div>
       <!-- Repeat for more projects -->
@@ -88,3 +88,4 @@
 
 </body>
 </html>
+
