--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
       <!-- Project Card -->
       <div class="bg-white shadow rounded-lg overflow-hidden">
-        <img src="project1.jpg" alt="Project 1" class="w-full h-48 object-cover">
+        <img src="project1.png" alt="Project 1" class="w-full h-48 object-cover">
         <div class="p-4">
           <h4 class="text-xl font-bold">Project Title</h4>
           <p class="text-gray-600">Apple Plus inspired website.</p>
@@ -83,9 +83,10 @@
 
   <!-- Footer -->
   <footer class="text-center py-6 text-gray-600">
-    © 2025 Darwin. All rights reserved.
+    © 2025 Gitgudatcoding All rights reserved.
   </footer>
 
 </body>
 </html>
+
 
