--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </section>
 
   <!-- Portfolio -->
- <section id="portfolio" class="bg-gray-100 py-20 px-6">
+  <section id="portfolio" class="bg-gray-100 py-20 px-6">
   <h3 class="text-3xl font-bold text-center mb-12">My Projects</h3>
   
   <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
@@ -43,7 +43,7 @@
     <div class="bg-white shadow rounded-lg overflow-hidden">
       <img src="images/project1.png" alt="Project 1" class="w-full h-48 object-cover">
       <div class="p-4">
-        <h4 class="text-xl font-bold">Apple Plus</h4>
+        <h4 class="text-xl font-bold">SPIRITECHOTV</h4>
         <p class="text-gray-600">Apple Plus inspired website.</p>
         <a href="https://spiritechotv.com/" class="text-blue-600 hover:underline">View Live</a>
       </div>
@@ -53,7 +53,7 @@
     <div class="bg-white shadow rounded-lg overflow-hidden">
       <img src="images/project2.png" alt="Project 2" class="w-full h-48 object-cover">
       <div class="p-4">
-        <h4 class="text-xl font-bold">Netflix Clone</h4>
+        <h4 class="text-xl font-bold">KLCIS STREAM</h4>
         <p class="text-gray-600">Streaming app clone design.</p>
         <a href="#" class="text-blue-600 hover:underline">View Live</a>
       </div>
@@ -63,8 +63,8 @@
     <div class="bg-white shadow rounded-lg overflow-hidden">
       <img src="images/project3.png" alt="Project 3" class="w-full h-48 object-cover">
       <div class="p-4">
-        <h4 class="text-xl font-bold">Portfolio Site</h4>
-        <p class="text-gray-600">Personal portfolio project.</p>
+        <h4 class="text-xl font-bold">MOVEMENT360</h4>
+        <p class="text-gray-600">HULU Inspired website.</p>
         <a href="#" class="text-blue-600 hover:underline">View Live</a>
       </div>
     </div>
@@ -111,6 +111,7 @@
 
 </body>
 </html>
+
 
 
 
