--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Darwin | Web Designer</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- AOS Library -->
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
+
 </head>
 <body class="bg-gray-50 text-gray-800">
 
@@ -35,39 +42,47 @@
   </section>
 
   <!-- Portfolio -->
-  <section id="portfolio" class="bg-gray-100 py-20 px-6">
+ <section id="portfolio" class="bg-gray-100 py-20 px-6">
   <h3 class="text-3xl font-bold text-center mb-12">My Projects</h3>
   
   <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
+    
     <!-- Project Card 1 -->
-    <div class="bg-white shadow rounded-lg overflow-hidden">
-      <img src="images/project1.png" alt="Project 1" class="w-full h-48 object-cover">
+    <div class="bg-white shadow rounded-lg overflow-hidden hover:shadow-lg transition" data-aos="fade-up" data-aos-delay="100">
+      <div class="overflow-hidden">
+        <img src="images/project1.png" alt="SPIRITECHOTV" class="w-full h-48 object-cover transform hover:scale-105 transition duration-300">
+      </div>
       <div class="p-4">
         <h4 class="text-xl font-bold">SPIRITECHOTV</h4>
         <p class="text-gray-600">Apple Plus inspired website.</p>
-        <a href="https://spiritechotv.com/" class="text-blue-600 hover:underline">View Live</a>
+        <a href="https://spiritechotv.com/" target="_blank" class="text-blue-600 hover:underline">View Live</a>
       </div>
     </div>
 
     <!-- Project Card 2 -->
-    <div class="bg-white shadow rounded-lg overflow-hidden">
-      <img src="images/project2.png" alt="Project 2" class="w-full h-48 object-cover">
+    <div class="bg-white shadow rounded-lg overflow-hidden hover:shadow-lg transition" data-aos="fade-up" data-aos-delay="200">
+      <div class="overflow-hidden">
+        <img src="images/project2.png" alt="KLCIS STREAM" class="w-full h-48 object-cover transform hover:scale-105 transition duration-300">
+      </div>
       <div class="p-4">
         <h4 class="text-xl font-bold">KLCIS STREAM</h4>
         <p class="text-gray-600">Streaming app clone design.</p>
-        <a href="#" class="text-blue-600 hover:underline">View Live</a>
+        <a href="#" target="_blank" class="text-blue-600 hover:underline">View Live</a>
       </div>
     </div>
 
     <!-- Project Card 3 -->
-    <div class="bg-white shadow rounded-lg overflow-hidden">
-      <img src="images/project3.png" alt="Project 3" class="w-full h-48 object-cover">
+    <div class="bg-white shadow rounded-lg overflow-hidden hover:shadow-lg transition" data-aos="fade-up" data-aos-delay="300">
+      <div class="overflow-hidden">
+        <img src="images/project3.png" alt="MOVEMENT360" class="w-full h-48 object-cover transform hover:scale-105 transition duration-300">
+      </div>
       <div class="p-4">
         <h4 class="text-xl font-bold">MOVEMENT360</h4>
-        <p class="text-gray-600">HULU Inspired website.</p>
-        <a href="#" class="text-blue-600 hover:underline">View Live</a>
+        <p class="text-gray-600">HULU inspired website.</p>
+        <a href="#" target="_blank" class="text-blue-600 hover:underline">View Live</a>
       </div>
     </div>
+
   </div>
 </section>
       <!-- Repeat for more projects -->
@@ -111,6 +126,7 @@
 
 </body>
 </html>
+
 
 
 
