--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   </section>
 
   <!-- Portfolio -->
-<section id="portfolio" class="bg-gray-100 py-20 px-6">
-  <h3 class="text-4xl font-extrabold text-center mb-16 text-gray-800">✨ My Projects</h3>
+   <section id="portfolio" class="bg-gray-100 py-20 px-6">
+  <h3 class="text-4xl font-extrabold text-center mb-16 text-gray-800">My Projects</h3>
   
   <div class="grid md:grid-cols-3 gap-10 max-w-7xl mx-auto">
     
@@ -61,7 +61,7 @@
       <div class="overflow-hidden relative">
         <img src="images/project2.png" alt="KLCIS STREAM" class="w-full h-56 object-cover transform group-hover:scale-110 transition duration-500">
         <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 group-hover:opacity-100 transition flex items-center justify-center">
-          <a href="#" target="_blank" class="bg-blue-600 text-white px-5 py-2 rounded-lg shadow hover:bg-blue-700 transition">View Live</a>
+          <a href="https://stream.klcis.cc/index" target="_blank" class="bg-blue-600 text-white px-5 py-2 rounded-lg shadow hover:bg-blue-700 transition">View Live</a>
         </div>
       </div>
       <div class="p-6">
@@ -75,7 +75,7 @@
       <div class="overflow-hidden relative">
         <img src="images/project3.png" alt="MOVEMENT360" class="w-full h-56 object-cover transform group-hover:scale-110 transition duration-500">
         <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 group-hover:opacity-100 transition flex items-center justify-center">
-          <a href="#" target="_blank" class="bg-blue-600 text-white px-5 py-2 rounded-lg shadow hover:bg-blue-700 transition">View Live</a>
+          <a href="https://movement360.tv/" target="_blank" class="bg-blue-600 text-white px-5 py-2 rounded-lg shadow hover:bg-blue-700 transition">View Live</a>
         </div>
       </div>
       <div class="p-6">
@@ -86,9 +86,6 @@
 
   </div>
 </section>
-      <!-- Repeat for more projects -->
-    </div>
-  </section>
 
   <!-- Services -->
   <section id="services" class="max-w-5xl mx-auto py-20 px-6">
@@ -127,6 +124,7 @@
 
 </body>
 </html>
+
 
 
 
