--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Project Card 1 -->
      <div class="group bg-white shadow-lg rounded-2xl overflow-hidden hover:shadow-2xl transition transform hover:-translate-y-2 duration-300" data-aos="fade-up" data-aos-delay="100">
         <div class="overflow-hidden relative">
-          <img src="images/project1.png" alt="SPIRITECHOTV" class="w-full h-56 object-cover transform group-hover:scale-110 transition duration-500">
+          <img src="images/project1.webp" alt="SPIRITECHOTV" class="w-full h-56 object-cover transform group-hover:scale-110 transition duration-500">
           <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 group-hover:opacity-100 transition flex items-center justify-center">
             <a href="https://spiritechotv.com/" target="_blank" class="bg-blue-600 text-white px-5 py-2 rounded-lg shadow hover:bg-blue-700 transition">View Live</a>
           </div>
@@ -61,7 +61,7 @@
       <!-- Project Card 2 -->
       <div class="group bg-white shadow-lg rounded-2xl overflow-hidden hover:shadow-2xl transition transform hover:-translate-y-2 duration-300" data-aos="fade-up" data-aos-delay="200">
         <div class="overflow-hidden relative">
-          <img src="images/project2.png" alt="KLCIS STREAM" class="w-full h-56 object-cover transform group-hover:scale-110 transition duration-500">
+          <img src="images/project2.webp" alt="KLCIS STREAM" class="w-full h-56 object-cover transform group-hover:scale-110 transition duration-500">
           <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 group-hover:opacity-100 transition flex items-center justify-center">
             <a href="https://stream.klcis.cc/index" target="_blank" class="bg-blue-600 text-white px-5 py-2 rounded-lg shadow hover:bg-blue-700 transition">View Live</a>
           </div>
@@ -75,7 +75,7 @@
       <!-- Project Card 3 -->
       <div class="group bg-white shadow-lg rounded-2xl overflow-hidden hover:shadow-2xl transition transform hover:-translate-y-2 duration-300" data-aos="fade-up" data-aos-delay="300">
         <div class="overflow-hidden relative">
-          <img src="images/project3.png" alt="MOVEMENT360" class="w-full h-56 object-cover transform group-hover:scale-110 transition duration-500">
+          <img src="images/project3.webp" alt="MOVEMENT360" class="w-full h-56 object-cover transform group-hover:scale-110 transition duration-500">
           <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 group-hover:opacity-100 transition flex items-center justify-center">
             <a href="https://movement360.tv/" target="_blank" class="bg-blue-600 text-white px-5 py-2 rounded-lg shadow hover:bg-blue-700 transition">View Live</a>
           </div>
@@ -127,6 +127,7 @@
 
 </body>
 </html>
+
 
 
 
