--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Darwin | Web Designer</title>
   <script src="https://cdn.tailwindcss.com"></script>
-    <!-- AOS CSS -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-</script>
-
 </head>
 <body class="bg-gray-50 text-gray-800">
 
@@ -39,13 +35,13 @@
   </section>
 
   <!-- Portfolio -->
-   <section id="portfolio" class="bg-gray-100 py-20 px-6">
-  <h3 class="text-4xl font-extrabold text-center mb-16 text-gray-800">My Projects</h3>
-  
-  <div class="grid md:grid-cols-3 gap-10 max-w-7xl mx-auto">
+  <section id="portfolio" class="bg-gray-100 py-20 px-6">
+    <h3 class="text-4xl font-extrabold text-center mb-16 text-gray-800">My Projects</h3>
     
-    <!-- Project Card 1 -->
-     <div class="group bg-white shadow-lg rounded-2xl overflow-hidden hover:shadow-2xl transition transform hover:-translate-y-2 duration-300" data-aos="fade-up" data-aos-delay="100">
+    <div class="grid md:grid-cols-3 gap-10 max-w-7xl mx-auto">
+      
+      <!-- Project Card 1 -->
+      <div class="group bg-white shadow-lg rounded-2xl overflow-hidden hover:shadow-2xl transition transform hover:-translate-y-2 duration-300">
         <div class="overflow-hidden relative">
           <img src="images/project1.webp" alt="SPIRITECHOTV" class="w-full h-56 object-cover transform group-hover:scale-110 transition duration-500">
           <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 group-hover:opacity-100 transition flex items-center justify-center">
@@ -59,7 +55,7 @@
       </div>
 
       <!-- Project Card 2 -->
-      <div class="group bg-white shadow-lg rounded-2xl overflow-hidden hover:shadow-2xl transition transform hover:-translate-y-2 duration-300" data-aos="fade-up" data-aos-delay="200">
+      <div class="group bg-white shadow-lg rounded-2xl overflow-hidden hover:shadow-2xl transition transform hover:-translate-y-2 duration-300">
         <div class="overflow-hidden relative">
           <img src="images/project2.webp" alt="KLCIS STREAM" class="w-full h-56 object-cover transform group-hover:scale-110 transition duration-500">
           <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 group-hover:opacity-100 transition flex items-center justify-center">
@@ -73,7 +69,7 @@
       </div>
 
       <!-- Project Card 3 -->
-      <div class="group bg-white shadow-lg rounded-2xl overflow-hidden hover:shadow-2xl transition transform hover:-translate-y-2 duration-300" data-aos="fade-up" data-aos-delay="300">
+      <div class="group bg-white shadow-lg rounded-2xl overflow-hidden hover:shadow-2xl transition transform hover:-translate-y-2 duration-300">
         <div class="overflow-hidden relative">
           <img src="images/project3.webp" alt="MOVEMENT360" class="w-full h-56 object-cover transform group-hover:scale-110 transition duration-500">
           <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 group-hover:opacity-100 transition flex items-center justify-center">
@@ -86,9 +82,8 @@
         </div>
       </div>
 
-    </div> 
+    </div>
   </section>
-
 
   <!-- Services -->
   <section id="services" class="max-w-5xl mx-auto py-20 px-6">
@@ -127,12 +122,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
